--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-    "token": "",
-    "clientID": "",
-    "basvurulog": "",
-    "yetki1": "",
+    "token": "MTE5NjkwMDY0NjgwNTMxNTY1NA.GqjHWD.dv4U8u25t7cFgsu-DcnD1PgJfg65pkHmAQkNBc",
+    "clientID": "1179152392890089574",
+    "basvurulog": "1196975664738349147",
+    "yetki1": "1179152392890089574",
     "yetki2": ""
 }
